--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx parcel ./src/index.html",
+    "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://github.com/ruudkas/solarSystem",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "three": "^0.133.0"
   },
   "devDependencies": {
