--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "gh-pages": "^5.0.0",
-    "three": "^0.133.0"
+    "three": "^0.133.0",
+    "dat.gui": "^0.7.9"
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
