--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx parcel ./index.html",
+    "build": "parcel build ./index.html",
     "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://github.com/ruudkas/solarSystem",
     "deploy": "gh-pages -d dist"
   },
