--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fs": "^0.0.1-security",
     "gh-pages": "^5.0.0",
     "three": "^0.133.0",
-    "dat.gui": "^0.7.9"
+    "dat.gui": "^0.7.9",
+    "parcel": "^2.8.3"
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
