--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "Access-Control-Allow-Origin": "https://ruudkas.github.io",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx parcel ./index.html",
-    "build": "parcel build ./index.html",
+    "start": "parcel ./index.html",
+    "start:dev": "npx parcel ./index.html",
+    "build": "npx -p parcel-bundler parcel build index.html",
     "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://github.com/ruudkas/solarSystem",
     "deploy": "gh-pages -d dist"
   },
