--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel ./index.html",
     "start:dev": "npx parcel ./index.html",
-    "build": "npx -p parcel-bundler parcel build index.html",
+    "build": "parcel build ./index.html --no-minify",
     "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://github.com/ruudkas/solarSystem",
     "deploy": "gh-pages -d dist"
   },
